// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders correctly 1`] = `
<button
  className="sc-htpNat fwGTjV"
>
  <span>
    Button
  </span>
</button>
`;

exports[`<Button> renders correctly as link 1`] = `
<a
  className="sc-bwzfXH ldAUUR sc-bdVaJa cgVLpQ"
  href="http://example.com"
  target="_blank"
>
  <span>
    Button
  </span>
</a>
`;
